# jungjung-backend

./: .gitattributes  .gitignore  pyproject.toml
backend/: main.py
backend/docs/: agent_graph.md  rag_graph.md
backend/documents/json/: 국회본회의_회의록._제429회(15차)_parsed.json  국회본회의_회의록._제429회(16차)_parsed.json
backend/documents/md/: 국회본회의_회의록._제429회(15차).md  국회본회의_회의록_제429회_14차_pyzerox.md
backend/documents/md_test/: 국회본회의_회의록._제429회(14차)_test.md  국회본회의_회의록._제429회(16차)_test.md  국회본회의_회의록._제430회(1차)_test.md  국회본회의_회의록._제430회(2차)_test.md
backend/documents/text/: 국회본회의_회의록_제429회_14차.txt
backend/rag/: agent.py  generator.py  graph.py  hyde.py  retriever.py  router.py
backend/routes/: search.py
backend/scripts/: README.md  visualize_graph.py
backend/services/: rag_service.py
backend/vector_store/: bm25_index.pkl  chroma.sqlite3
backend/vector_store/24d997a9-5a4c-4f83-81f5-90b5400121a2/: index_metadata.pickle
backend/vector_store/child_store/: chroma.sqlite3
backend/vector_store/parent_store/: 002f5248-7bdd-4292-8a13-bc8392ba2c68  00c5cf7e-19ae-4734-a716-9e786514ccac  00fadab0-35ad-4c2b-b472-aa3b9b6c3722  01375a8a-c7c1-49b6-9760-7ad05e227191  018c0f29-451c-4b43-a15d-1abb3b0c1acd  01b67a68-079a-469c-8198-4ab88c2110fe  023d19d0-cb46-4ed9-9958-76e5b793f338  02494199-f793-4808-8fd8-828aa8c73e00  02e6ac5f-dead-48b4-a432-6b8a19b0f1b7  (+1750 more)
notebooks/: ensemble_parent_child_retriever.py  md 문서 임베딩 후 rag .ipynb  md 문서 임베딩.ipynb  output.md  output.txt  parent_child_rag_example.py  query_test.py  test.ipynb  upstage 문서 파서를 활용한 pdf 파싱.ipynb  열린국회정보 api 테스트.ipynb
(+1 files in other folders)
